# boj-ts-api

./: .gitignore  README.md  mkdocs.yml  openapi.yaml  pyproject.toml
.claude/: CLAUDE.md
.github/workflows/: ci.yml  docs.yml  publish.yml
boj_ts_api/: __init__.py  cli.py  config.py  csv_helper.py  exceptions.py
boj_ts_api/client/: __init__.py  _parse.py  _transport.py  async_client.py  sync_client.py
boj_ts_api/models/: __init__.py  base.py  metadata.py  response.py  series.py
docs/: api-reference.md  boj-api.md  getting-started.md  index.md  openapi-spec.md
docs/assets/: openapi.yaml
examples/: generate_summary.py  quickstart.ipynb
tests/: test_cli.py  test_client_async.py  test_client_sync.py  test_csv_helper.py  test_exceptions.py  test_models.py  test_pagination.py
tests/fixtures/: data_code_paginated_page1.json  data_code_paginated_page2.json  data_code_response.json  metadata_response.json
