[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "boj-ts-api"
version = "0.1.0"
description = "Python client for the Bank of Japan Time-Series Statistics API"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "obichan117" }]
keywords = ["boj", "bank-of-japan", "statistics", "api", "time-series"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.25",
    "pydantic>=2.0",
]

[project.optional-dependencies]
pandas = ["pandas>=2.0"]
cli = ["click>=8.0"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "ruff>=0.1",
    "mkdocs>=1.5",
    "mkdocs-material>=9.0",
    "mkdocstrings[python]>=0.24",
    "click>=8.0",
    "pandas>=2.0",
]

[project.scripts]
bojts = "boj_ts_api.cli:main"

[project.urls]
Homepage = "https://github.com/obichan117/boj-ts-api"
Repository = "https://github.com/obichan117/boj-ts-api"
Documentation = "https://obichan117.github.io/boj-ts-api/"

[tool.ruff]
target-version = "py310"
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["boj_ts_api"]
