[project]
name = "pyboj-workspace"
version = "0.0.0"
requires-python = ">=3.10"
dependencies = [
    "boj-ts-api",
    "pyboj",
]

[tool.uv.sources]
boj-ts-api = { workspace = true }
pyboj = { workspace = true }

[tool.uv.workspace]
members = ["packages/*"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "ruff>=0.1",
    "mkdocs>=1.5",
    "mkdocs-material>=9.0",
    "mkdocstrings[python]>=0.24",
    "pandas>=2.0",
]

[tool.ruff]
target-version = "py310"
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = [
    "packages/boj-ts-api/tests",
    "packages/pyboj/tests",
]
